src/objects/Discount__c.object
<CustomObject>
    <description>The object is used to set discounts for specific customer/groups of customers</description>
    <fields>
        <fullName>ATM_Fee_In_Other_Currencies_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Personal discount for ATM money withdrawal in other currencies</description>
        <label>ATM Fee In Other Currencies Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ATM_Fee_In_Other_Currencies__c</fullName>
        <formula>Product__r.ATM_Fee_In_Other_Currencies__c * (1 - ATM_Fee_In_Other_Currencies_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATM Fee In Other Currencies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discount for card replacement cost</description>
        <label>Card Replacement Cost Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost__c</fullName>
        <formula>Product__r.Card_Replacement_Cost__c * (1 -  Card_Replacement_Cost_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Replacement Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Calendar_Month_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discount on cost per calendar month</description>
        <label>Cost Per Calendar Month Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Calendar_Month__c</fullName>
        <formula>Product__r.Cost_Per_Calendar_Month__c * (1 -  Cost_Per_Calendar_Month_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Calendar Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Contains the value of the Products Name</description>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>This field is used to specify the product to which the discount applied</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field stores the reason for the discount</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Christmas discount</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Long contract</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>